--- a/client/index.html
+++ b/client/index.html
@@ -1,187 +1,212 @@
 <!DOCTYPE html>
 <html ng-app="main">
-    <head>
-        <title>WebIRC</title>
-        <meta charset=utf-8>
+	<head>
+		<title>WebIRC</title>
+		<meta charset=utf-8>
 
-        <!-- Polices supplémentaire -->
-        <link href="http://fonts.googleapis.com/css?family=Share+Tech" rel=stylesheet type=text/css> <!-- Presque Monospace -->
-        <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css"> <!-- Sans serif -->
-        <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css"> <!-- Serif -->
-        <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css"> <!-- Sans serif (bien pour les smileys) -->
+		<!-- Polices supplémentaire -->
+		<link href="http://fonts.googleapis.com/css?family=Share+Tech" rel=stylesheet type=text/css> <!-- Presque Monospace -->
+		<link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css"> <!-- Sans serif -->
+		<link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css"> <!-- Serif -->
+		<link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css"> <!-- Sans serif (bien pour les smileys) -->
 
-        <!-- Nos fichiers CSS -->
-        <link href="css/sprites.css" rel="stylesheet" type="text/css">
-        <!--<link href="css/style.css" rel="stylesheet" type="text/css">-->
+		<!-- Nos fichiers CSS -->
+		<link href="css/sprites.css" rel="stylesheet" type="text/css">
+		<link href="css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" media="screen" href="css/responsive.css" type="text/css" />
 
-        <!-- Dépendances JavaScript -->
-        <script src="http://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"> // jQuery </script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.js" type="text/javascript"> // AngularJS </script>
-        <script src="http://underscorejs.org/underscore-min.js" type="text/javascript"> // underscore </script>
-        <script src="https://cdn.socket.io/socket.io-1.4.3.js"> // Socket.io </script>
+		<!-- Dépendances JavaScript -->
+		<script src="http://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"> // jQuery </script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.js" type="text/javascript"> // AngularJS </script>
+		<script src="http://underscorejs.org/underscore-min.js" type="text/javascript"> // underscore </script>
+		<script src="https://cdn.socket.io/socket.io-1.4.3.js"> // Socket.io </script>
 
-        <!-- Nos scripts -->
-        <script src="js/main.js" type="text/javascript"></script>
-        <script src="js/IRC.js"></script>
+		<!-- Nos scripts -->
+		<script src="js/main.js" type="text/javascript"></script>
+		<script src="js/IRC.js"></script>
 
-    </head>
-    <body ng-controller="fieldsController as ctrl">
-        <header>
-          <h1>Web IRC</h1>
-        </header>
-        <hr>
+	</head>
+	<body ng-controller="fieldsController as ctrl">
+		<div class="ircChat">
 
-        <main>
-          <nav>
-            <ul>
-              <li ng-repeat="channel in channels" ng-bind="channel.name"></li> <!-- Affiche la liste des channels -->
-            </ul>
-          </nav>
-          <section ng-repeat="channel in channels" ng-class="getActiveChannelClass(currentChannel)"> <!-- Pour chaque salon -->
-            <div> <!-- On affiche le salon et son topic -->
-              <p>{{channel.topic}}</p>
-            </div>
-            <div> <!-- On affiche la liste des utilisateurs -->
-              <ul>
-                <li ng-repeat="user in channel.users" ng-bind="user"></li>
-              </ul>
-            </div>
-            <div ng-repeat="block in channel.blocks"> <!-- Pour chaque bloc de messages -->
-              <h3 ng-bind="block.user"></h3> <!-- Une fois son auteur -->
-              <p ng-repeat="message in block.messages"
-                  ng-bind="message.text"
-                  ng-attr-title="Envoyé à: {{message.time | date: 'HH:mm:ss'}}"
-                  ng-class="getMessageType(message.type);">
-              </p> <!-- Et chaque message -->
-            </div>
-          </section>
-        </main>
 
-        <hr>
+			<header>
+				<h1>Web IRC</h1><span id="titre">// <span ng-show="">Salons : {{}} | </span><span id="date"></span></span>
+			</header>
+			<main id=chatbox>
+				<nav>
+					<ul>
+						<li ng-repeat="channel in channels" ng-bind="channel.name"></li> <!-- Affiche la liste des channels -->
+					</ul>
+				</nav>
+				<section ng-repeat="channel in channels" ng-class="getActiveChannelClass(currentChannel)"> <!-- Pour chaque salon -->
+					<div> <!-- On affiche le salon et son topic -->
+						<p>{{channel.topic}}</p>
+					</div>
+					<div> <!-- On affiche la liste des utilisateurs -->
+						<ul>
+							<li ng-repeat="user in channel.users" ng-bind="user"></li>
+						</ul>
+					</div>
+					<div ng-repeat="block in channel.blocks"> <!-- Pour chaque bloc de messages -->
+						<h3 ng-class="user" ng-bind="block.user"></h3> <!-- Une fois son auteur -->
+						<p  ng-class="message-l"
+							 ng-repeat="message in block.messages"
+							 ng-bind="message.text"
+							 ng-attr-title="Envoyé à: {{message.time | date: 'HH:mm:ss'}}"
+							 ng-class="getMessageType(message.type);">
+						</p> <!-- Et chaque message -->
+					</div>
+				</section>
+			</main>
 
-        <form ng-submit="register($event);" ng-hide="me.connected">
-          <input ng-model="me.nickname" placeholder="nickname">
-          <input ng-model="me.password" placeholder="password">
-          <textarea ng-model="me.autoChannels" placeholder="channels"></textarea>
-          <textarea ng-model="me.autoCommands" placeholder="commands"></textarea>
-          <input type=submit ng-disabled="me.connected">
-        </form>
+			<form ng-submit="register($event);" ng-hide="me.connected">
+				<fieldset class="fields">
+					<p>
+						<label for=nickname>Nickname :</label>
+						<input ng-model="me.nickname" placeholder="nickname" required>
+					</p>
+					<p>
+						<label for=password>Password :</label>
+						<input ng-model="me.password" placeholder="password">
+					</p>
+					<p>
+						<label for=joinChannel>Auto-Join-Channel : </label>
+						<textarea ng-model="me.autoChannels" placeholder="channels" required></textarea>
+					</p>
+					<p>
+						<label for=joinCommand>Auto-Join-Command : </label>
+						<textarea ng-model="me.autoCommands" placeholder="commands"></textarea>
+					</p>
+					<input type=submit ng-disabled="me.connected">
+				</fieldset>
+			</form>
 
-        <form ng-submit="sendMessage($event);" ng-show="me.connected">
-          <textarea ng-model="message"></textarea>
-          <input type=submit>
-        </form>
-        <hr>
+			<form ng-submit="sendMessage($event);" ng-show="me.connected">
+				<fieldset class="inputText">
+					<textarea ng-model="message" placeholder="Entrez votre message"></textarea>
+					<input type=submit>
+				</fieldset>
+			</form>
+			<footer>
+				<p>WebIRC Client by Rousseau Mathieu &amp; Castiaux Julien</p>
+			</footer>
 
-        <footer>
-          <p>WebIRC Client by Rousseau Mathieu &amp; Castiaux Julien</p>
-        </footer>
 
-        <table id="smiley" hidden> <!-- Pour l'instant => hidden, et mis n'importe où !!! -->
-            <caption>Liste des smileys disponible</caption>
-            <tr>
-                <td class="sprites" name=":)"></td>
-                <td class="sprites" name=":("></td>
-                <td class="sprites" name=":D"></td>
-                <td class="sprites" name="xD"></td>
-                <td class="sprites" name="(cool)"></td>
-                <td class="sprites" name=":o"></td>
-                <td class="sprites" name=";)"></td>
-                <td class="sprites" name="(chuckle)"></td>
-                <td class="sprites" name=":'("></td>
-            </tr>
-            <tr>
-                <td class="sprites" name="(fear)"></td>
-                <td class="sprites" name=":|"></td>
-                <td class="sprites" name="(kiss)"></td>
-                <td class="sprites" name=":p"></td>
-                <td class="sprites" name=":$"></td>
-                <td class="sprites" name="(wait)"></td>
-                <td class="sprites" name="(angel)"></td>
-                <td class="sprites" name=":x"></td>
-                <td class="sprites" name="(devil)"></td>
-            </tr>
-            <tr>
-                <td class="sprites" name="(wasntme)"></td>
-                <td class="sprites" name="(party)"></td>
-                <td class="sprites" name=":@"></td>
-                <td class="sprites" name="(doh)"></td>
-                <td class="sprites" name="]:)"></td>
-                <td class="sprites" name="(yawn)"></td>
-                <td class="sprites" name="(inlove)"></td>
-                <td class="sprites" name=":^)"></td>
-                <td class="sprites" name="(idontcare)"></td>
-            </tr>
-            <tr>
-                <td class="sprites" name="(heidy)"></td>
-                <td class="sprites" name="<3"></td>
-                <td class="sprites" name="(star)"></td>
-                <td class="sprites" name="(handshake)"></td>
-                <td class="sprites" name="(n)"></td>
-                <td class="sprites" name="(y)"></td>
-                <td class="sprites" name="(emo)"></td>
-                <td class="sprites" name="(clap)"></td>
-                <td class="sprites" name="(rofl)"></td>
-            </tr>
-            <tr>
-                <td class="sprites" name="(bug)"></td>
-                <td class="sprites" name="(headbang)"></td>
-                <td class="sprites" name="(clock)"></td>
-                <td class="sprites" name="(punch)"></td>
-                <td class="sprites" name="(drunk)"></td>
-                <td class="sprites" name="(smartphone)"></td>
-                <td class="sprites" name="(film)"></td>
-                <td class="sprites" name="(mail)"></td>
-                <td class="sprites" name="(brokenheart)"></td>
-            </tr>
-            <tr>
-                <td class="sprites" name="(cake)"></td>
-                <td class="sprites" name="(music)"></td>
-                <td class="sprites" name="($)"></td>
-                <td class="sprites" name="(pizza)"></td>
-                <td class="sprites" name="(cafe)"></td>
-                <td class="sprites" name="(sun)"></td>
-                <td class="sprites" name="(flex)"></td>
-                <td class="sprites" name="(tmi)"></td>
-                <td class="sprites" name="(flower)"></td>
-            </tr>
-                <tr>
-                <td class="sprites" name="(skome)"></td>
-                <td class="sprites" name="(rain)"></td>
-                <td class="sprites" name="(whew)"></td>
-                <td class="sprites" name="(shake)"></td>
-                <td class="sprites" name="(bow)"></td>
-                <td class="sprites" name="(think)"></td>
-                <td class="sprites" name="(call)"></td>
-                <td class="sprites" name="(tumbleweed)"></td>
-                <td class="sprites" name="(beer)"></td>
-            </tr>
-            <tr>
-                <td class="sprites" name="(nerd)"></td>
-                <td class="sprites" name="(hi)"></td>
-                <td class="sprites" name="(mm)"></td>
-                <td class="sprites" name="(puke)"></td>
-                <td class="sprites" name="(worry)"></td>
-                <td class="sprites" name="(facepalm)"></td>
-                <td class="sprites" name="(dance)"></td>
-                <td class="sprites" name="(bandit)"></td>
-                <td class="sprites" name="(drink)"></td>
-            </tr>
-            <tr>
-                <td class="sprites" name="|-)"></td>
-                <td class="sprites" name="(ninja)"></td>
-                <td class="sprites" name="(girl)"></td>
-                <td class="sprites" name="(hug)"></td>
-                <td class="sprites" name="(yn)"></td>
-                <td class="sprites" name="(envy)"></td>
-                <td class="sprites" name="(talktothehand)"></td>
-                <td class="sprites" name="(cat)"></td>
-                <td class="sprites" name="(idea)"></td>
-            </tr>
-            <tr>
-                <td class="sprites" name="(rock)"></td>
-                <td class="sprites" name="(poolparty)"></td>
-            </tr>
-        </table>
-    </body>
+			<table id="smiley" hidden> <!-- Pour l'instant => hidden, et mis n'importe où !!! -->
+				<caption>Liste des smileys disponible</caption>
+				<tr>
+					<td class="sprites" name=":)"></td>
+					<td class="sprites" name=":("></td>
+					<td class="sprites" name=":D"></td>
+					<td class="sprites" name="xD"></td>
+					<td class="sprites" name="(cool)"></td>
+					<td class="sprites" name=":o"></td>
+					<td class="sprites" name=";)"></td>
+					<td class="sprites" name="(chuckle)"></td>
+					<td class="sprites" name=":'("></td>
+				</tr>
+				<tr>
+					<td class="sprites" name="(fear)"></td>
+					<td class="sprites" name=":|"></td>
+					<td class="sprites" name="(kiss)"></td>
+					<td class="sprites" name=":p"></td>
+					<td class="sprites" name=":$"></td>
+					<td class="sprites" name="(wait)"></td>
+					<td class="sprites" name="(angel)"></td>
+					<td class="sprites" name=":x"></td>
+					<td class="sprites" name="(devil)"></td>
+				</tr>
+				<tr>
+					<td class="sprites" name="(wasntme)"></td>
+					<td class="sprites" name="(party)"></td>
+					<td class="sprites" name=":@"></td>
+					<td class="sprites" name="(doh)"></td>
+					<td class="sprites" name="]:)"></td>
+					<td class="sprites" name="(yawn)"></td>
+					<td class="sprites" name="(inlove)"></td>
+					<td class="sprites" name=":^)"></td>
+					<td class="sprites" name="(idontcare)"></td>
+				</tr>
+				<tr>
+					<td class="sprites" name="(heidy)"></td>
+					<td class="sprites" name="<3"></td>
+					<td class="sprites" name="(star)"></td>
+					<td class="sprites" name="(handshake)"></td>
+					<td class="sprites" name="(n)"></td>
+					<td class="sprites" name="(y)"></td>
+					<td class="sprites" name="(emo)"></td>
+					<td class="sprites" name="(clap)"></td>
+					<td class="sprites" name="(rofl)"></td>
+				</tr>
+				<tr>
+					<td class="sprites" name="(bug)"></td>
+					<td class="sprites" name="(headbang)"></td>
+					<td class="sprites" name="(clock)"></td>
+					<td class="sprites" name="(punch)"></td>
+					<td class="sprites" name="(drunk)"></td>
+					<td class="sprites" name="(smartphone)"></td>
+					<td class="sprites" name="(film)"></td>
+					<td class="sprites" name="(mail)"></td>
+					<td class="sprites" name="(brokenheart)"></td>
+				</tr>
+				<tr>
+					<td class="sprites" name="(cake)"></td>
+					<td class="sprites" name="(music)"></td>
+					<td class="sprites" name="($)"></td>
+					<td class="sprites" name="(pizza)"></td>
+					<td class="sprites" name="(cafe)"></td>
+					<td class="sprites" name="(sun)"></td>
+					<td class="sprites" name="(flex)"></td>
+					<td class="sprites" name="(tmi)"></td>
+					<td class="sprites" name="(flower)"></td>
+				</tr>
+				<tr>
+					<td class="sprites" name="(skome)"></td>
+					<td class="sprites" name="(rain)"></td>
+					<td class="sprites" name="(whew)"></td>
+					<td class="sprites" name="(shake)"></td>
+					<td class="sprites" name="(bow)"></td>
+					<td class="sprites" name="(think)"></td>
+					<td class="sprites" name="(call)"></td>
+					<td class="sprites" name="(tumbleweed)"></td>
+					<td class="sprites" name="(beer)"></td>
+				</tr>
+				<tr>
+					<td class="sprites" name="(nerd)"></td>
+					<td class="sprites" name="(hi)"></td>
+					<td class="sprites" name="(mm)"></td>
+					<td class="sprites" name="(puke)"></td>
+					<td class="sprites" name="(worry)"></td>
+					<td class="sprites" name="(facepalm)"></td>
+					<td class="sprites" name="(dance)"></td>
+					<td class="sprites" name="(bandit)"></td>
+					<td class="sprites" name="(drink)"></td>
+				</tr>
+				<tr>
+					<td class="sprites" name="|-)"></td>
+					<td class="sprites" name="(ninja)"></td>
+					<td class="sprites" name="(girl)"></td>
+					<td class="sprites" name="(hug)"></td>
+					<td class="sprites" name="(yn)"></td>
+					<td class="sprites" name="(envy)"></td>
+					<td class="sprites" name="(talktothehand)"></td>
+					<td class="sprites" name="(cat)"></td>
+					<td class="sprites" name="(idea)"></td>
+				</tr>
+				<tr>
+					<td class="sprites" name="(rock)"></td>
+					<td class="sprites" name="(poolparty)"></td>
+				</tr>
+			</table>
+		</div>
+		<aside>
+			<h1 id="titreAside">Connecté(s)</h1>
+			<section id="userConnected">
+				<ul class="Everyone">
+					<li><span>User : </span><span> | Channel : </span></li>
+				</ul>
+			</section>
+		</aside>
+	</body>
 </html>
